--- a/templates/blog/post.html.twig
+++ b/templates/blog/post.html.twig
@@ -9,95 +9,64 @@
             <div class="wrapper style2">
                 <div class="inner">
                     <div class="container">
-                        <div class="row">
-                            <div class="col-4 col-12-medium">
-                                <div id="sidebar">
+                        <div id="content">
 
-                                    <!-- Sidebar -->
+                            <!-- Content -->
+                            <article>
+                                <header class="major">
+                                    <h2>No Sidebar</h2>
+                                    <p>Sidebars are not welcome here</p>
+                                </header>
 
-                                    <section>
-                                        <header class="major">
-                                            <h2>Subheading</h2>
-                                        </header>
-                                        <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-                                        Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-                                        Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-                                        consequat etiam.</p>
-                                        <footer>
-                                            <a href="#" class="button icon solid fa-info-circle">Find out more</a>
-                                        </footer>
-                                    </section>
+                                <span class="image featured"><img src="images/pic08.jpg" alt="" /></span>
 
-                                    <section>
-                                        <header class="major">
-                                            <h2>Subheading</h2>
-                                        </header>
-                                        <ul class="style2">
-                                            <li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-                                            <li><a href="#">Ornare in hendrerit in lectus</a></li>
-                                            <li><a href="#">Semper mod quis eget mi dolore</a></li>
-                                            <li><a href="#">Quam turpis feugiat sit dolor</a></li>
-                                            <li><a href="#">Amet ornare in hendrerit in lectus</a></li>
-                                            <li><a href="#">Semper mod quisturpis nisi</a></li>
-                                            <li><a href="#">Consequat etiam lorem phasellus</a></li>
-                                            <li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-                                            <li><a href="#">Semper mod quisturpis nisi</a></li>
-                                        </ul>
-                                        <footer>
-                                            <a href="#" class="button icon solid fa-arrow-circle-right">Do Something</a>
-                                        </footer>
-                                    </section>
+                                <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
+                                Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
+                                Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
+                                consequat etiam lorem ipsum dolor sit amet nullam. Phasellus quam turpis,
+                                feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis
+                                eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et
+                                mattis lectus sit amet pulvinar. Nam turpis nisi consequat etiam.</p>
 
-                                </div>
-                            </div>
-                            <div class="col-8 col-12-medium imp-medium">
-                                <div id="content">
+                                <h3>More intriguing information</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
+                                justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
+                                ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
+                                vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
+                                Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
+                                rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
+                                Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
+                                ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
+                                vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
+                                Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
+                                rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
+                                Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
+                                Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus lorem ipsum
+                                dolor sit amet phasellus consequat.</p>
 
-                                    <!-- Content -->
+                                <p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
+                                quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
+                                Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
+                                fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
+                                Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
+                                ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
+                                vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
+                                fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
+                                Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
+                                Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus sed feugiat lorem ipsum
+                                dolor nullam blandit tempus.</p>
+                            </article>
 
-                                    <article>
-                                        <header class="major">
-                                            <h2>Left Sidebar</h2>
-                                            <p>Which means the sidebar is on the left</p>
-                                        </header>
-
-                                        <span class="image featured"><img src="images/pic08.jpg" alt="" /></span>
-
-                                        <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-                                        Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-                                        Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-                                        consequat etiam lorem ipsum dolor sit amet nullam.</p>
-
-                                        <h3>More intriguing information</h3>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-                                        justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-                                        ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-                                        vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-                                        Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-                                        rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-                                        Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-                                        Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
-
-                                        <p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-                                        quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-                                        Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-                                        fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-                                        Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-                                        Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
-                                    </article>
-
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+
             <div class="wrapper style3">
                 <div class="inner">
                     <div class="container">
                         <div class="row">
                             <div class="col-8 col-12-medium">
-
                                 <!-- Article list -->
                                 <section class="box article-list">
                                     <h2 class="icon fa-file-alt">Recent Posts</h2>
@@ -115,7 +84,6 @@
                                             feugiat et sit amet ornare in, hendrerit in lectus semper mod quis eget mi dolore.</p>
                                         </div>
                                     </article>
-
                                     <!-- Excerpt -->
                                     <article class="box excerpt">
                                         <a href="#" class="image left"><img src="images/pic05.jpg" alt="" /></a>
@@ -168,7 +136,6 @@
                                         </footer>
                                     </article>
                                 </section>
-
                             </div>
                         </div>
                     </div>
