--- a/templates/blog/post.html.twig
+++ b/templates/blog/post.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% set pageType='left-sidebar' %}
+{% set pageType='no-sidebar' %}
 
 {% block banner %}{% endblock %}
 
@@ -14,47 +14,17 @@
                             <!-- Content -->
                             <article>
                                 <header class="major">
-                                    <h2>No Sidebar</h2>
-                                    <p>Sidebars are not welcome here</p>
+                                    <h2>{{ blog.getTitle }}</h2>
+                                    <p>{{ blog.getAuthor.getName }}</p>
+                                    <p><b>Published:</b> {{ blog.getDatePublished|date('F j, Y')  }}</p>
+                                    <p><b>Last Updated:</b> {{ blog.getDateUpdated|date('F j, Y')  }}</p>
                                 </header>
 
                                 <span class="image featured"><img src="images/pic08.jpg" alt="" /></span>
 
-                                <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-                                Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-                                Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-                                consequat etiam lorem ipsum dolor sit amet nullam. Phasellus quam turpis,
-                                feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis
-                                eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et
-                                mattis lectus sit amet pulvinar. Nam turpis nisi consequat etiam.</p>
-
-                                <h3>More intriguing information</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-                                justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-                                ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-                                vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-                                Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-                                rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-                                Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-                                ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-                                vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-                                Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-                                rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-                                Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-                                Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus lorem ipsum
-                                dolor sit amet phasellus consequat.</p>
-
-                                <p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-                                quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-                                Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-                                fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-                                Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-                                ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-                                vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-                                fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-                                Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-                                Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus sed feugiat lorem ipsum
-                                dolor nullam blandit tempus.</p>
+                                {% apply markdown_to_html %}
+                                {{ blog.getContent|raw  }}
+                                {% endapply %}
                             </article>
 
                         </div>
@@ -70,47 +40,19 @@
                                 <!-- Article list -->
                                 <section class="box article-list">
                                     <h2 class="icon fa-file-alt">Recent Posts</h2>
-
-                                    <!-- Excerpt -->
-                                    <article class="box excerpt">
-                                        <a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
-                                        <div>
-                                            <header>
-                                                <span class="date">July 24</span>
-                                                <h3><a href="#">Repairing a hyperspace window</a></h3>
-                                            </header>
-                                            <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus
-                                            semper mod quisturpis nisi consequat etiam lorem. Phasellus quam turpis,
-                                            feugiat et sit amet ornare in, hendrerit in lectus semper mod quis eget mi dolore.</p>
-                                        </div>
-                                    </article>
-                                    <!-- Excerpt -->
-                                    <article class="box excerpt">
-                                        <a href="#" class="image left"><img src="images/pic05.jpg" alt="" /></a>
-                                        <div>
-                                            <header>
-                                                <span class="date">July 18</span>
-                                                <h3><a href="#">Adventuring with a knee injury</a></h3>
-                                            </header>
-                                            <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus
-                                            semper mod quisturpis nisi consequat etiam lorem. Phasellus quam turpis,
-                                            feugiat et sit amet ornare in, hendrerit in lectus semper mod quis eget mi dolore.</p>
-                                        </div>
-                                    </article>
-
-                                    <!-- Excerpt -->
-                                    <article class="box excerpt">
-                                        <a href="#" class="image left"><img src="images/pic06.jpg" alt="" /></a>
-                                        <div>
-                                            <header>
-                                                <span class="date">July 14</span>
-                                                <h3><a href="#">Preparing for Y2K38</a></h3>
-                                            </header>
-                                            <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus
-                                            semper mod quisturpis nisi consequat etiam lorem. Phasellus quam turpis,
-                                            feugiat et sit amet ornare in, hendrerit in lectus semper mod quis eget mi dolore.</p>
-                                        </div>
-                                    </article>
+                                    {% for b in blogs %}
+                                        <!-- Excerpt -->
+                                        <article class="box excerpt">
+                                            <a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
+                                            <div>
+                                                <header>
+                                                    <span class="date">{{ b.getDatePublished|date('F j, Y')  }}</span>
+                                                    <h3><a href="{{ path('selene_cms_blog_post', { slug: b.getSlug }) }}">{{ b.getTitle }}</a></h3>
+                                                </header>
+                                                {{ blog.getPreview  }}
+                                            </div>
+                                        </article>
+                                    {% endfor %}
 
                                 </section>
                             </div>
@@ -122,7 +64,8 @@
                                     <article>
                                         <a href="#" class="image featured"><img src="images/pic07.jpg" alt=""></a>
                                         <header>
-                                            <h3><a href="#">Neural Implants</a></h3>
+                                            <h3><a href="#">{% apply spotlightTitle_content %}Neural Implants{% endapply %}</a></h3>
+                                            {% apply spotlight_content %}
                                             <p>The pros and cons. Mostly cons.</p>
                                         </header>
                                         <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus semper mod
@@ -131,6 +74,7 @@
                                         et tempus consequat etiam.</p>
                                         <p>Lorem ipsum dolor quam turpis, feugiat sit amet ornare in, hendrerit in lectus semper
                                         mod quisturpis nisi consequat etiam lorem sed amet quam turpis.</p>
+                                        {% endapply %}
                                         <footer>
                                             <a href="#" class="button alt icon solid fa-file-alt">Continue Reading</a>
                                         </footer>
