--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -1,16 +1,20 @@
 {% extends 'base.html.twig' %}
 
+{% set pageType = 'left-sidebar' %}
 {% block title %}
     Reset your password
 {% endblock %}
 
 {% block banner %}
+
 {% endblock %}
 
 {% block feature2 %}
+
 {% endblock %}
 
 {% block recentPosts %}
+
 {% endblock %}
 
 {% block feature1 %}
