--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -2,67 +2,74 @@
 
 {% set pageType='left-sidebar' %}
 
-{% block banner %}{% endblock %}
+{% block title %}
+    Reset your password
+{% endblock %}
 
-    {% block mainWrapper %}
-        <div id="main-wrapper">
-            <div class="wrapper style2">
-                <div class="inner">
-                    <div class="container">
-                        <div id="content">
+{% block banner %}
+{% endblock %}
 
-                            <!-- Content -->
-                            <article>
-                                <header class="major">
-                                    <h2>Login</h2>
-                                    <p>Sign in here</p>
-                                </header>
-                                <form method="post">
-                                    {% if error %}
-                                        <div class="alert alert-danger">
-                                            {{ error.messageKey|trans(error.messageData, 'security') }}
-                                        </div>
-                                    {% endif %}
+{% block feature2 %}
+{% endblock %}
 
-                                    {% if app.user %}
-                                        <h3>
-                                            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
-                                        </h3>
-                                    {% endif %}
+{% block recentPosts %}
+{% endblock %}
 
-                                    <input type="email"
-                                           value="{{ last_username }}"
-                                           name="email"
-                                           id="inputEmail"
-                                           class="form-control"
-                                           autocomplete="email"
-                                           required
-                                           placeholder="Email Address"
-                                           autofocus />
+{% block feature1 %}
 
-                                    <input type="password"
-                                           name="password"
-                                           id="inputPassword"
-                                           class="form-control"
-                                           autocomplete="current-password"
-                                           placeholder="Password"
-                                           required />
+    <!-- Content -->
+    <article>
+        <header class="major">
+            <h2>Login</h2>
+            <p>Sign in here</p>
+        </header>
+        <form method="post">
+            {% if error %}
+                <div class="alert alert-danger">
+                    {{ error.messageKey|trans(error.messageData, 'security') }}
+                </div>
+            {% endif %}
 
-                                    <input type="hidden"
-                                           name="_csrf_token"
-                                           value="{{ csrf_token('authenticate') }}" />
+            {% if app.user %}
+                <h3>
+                    You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+                </h3>
+            {% endif %}
 
-                                    {#
-                                    Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-                                    See https://symfony.com/doc/current/security/remember_me.html
+            <input type="email"
+                   value="{{ last_username }}"
+                   name="email"
+                   id="inputEmail"
+                   class="form-control"
+                   autocomplete="email"
+                   required
+                   placeholder="Email Address"
+                   autofocus />
 
-                                    <div class="checkbox mb-3">
-                                        <label>
-                                            <input type="checkbox" name="_remember_me"> Remember me
-                                        </label>
-                                    </div>
-                                    #}
+            <input type="password"
+                   name="password"
+                   id="inputPassword"
+                   class="form-control"
+                   autocomplete="current-password"
+                   placeholder="Password"
+                   required />
 
-                                    <input type="submit" value="Login" class="primary" />
-                                </form>
-    {% endblock %}
+            <input type="hidden"
+                   name="_csrf_token"
+                   value="{{ csrf_token('authenticate') }}" />
+
+            {#
+            Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+            See https://symfony.com/doc/current/security/remember_me.html
+
+            <div class="checkbox mb-3">
+                <label>
+                    <input type="checkbox" name="_remember_me"> Remember me
+                </label>
+            </div>
+            #}
+
+            <input type="submit" value="Login" class="primary" />
+            <a href="{{ path('selene_cms_forgot_password_request') }}">Forgot Password</a>
+        </form>
+{% endblock %}
