making some changes for images

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -133,7 +133,7 @@
                 <!-- Main Wrapper -->
                 <div id="main-wrapper">
                     {% block feature1 %}
-                        <div class="wrapper {{ wrapperStyle|default('style1') }}">
+                        <div class="wrapper style1">
                             <div class="inner">
                                 <!-- Feature 1 -->
                                 <section class="container box feature1">
