--- a/templates/blog/post.html.twig
+++ b/templates/blog/post.html.twig
@@ -20,7 +20,7 @@
                                     <p><b>Last Updated:</b> {{ blog.getDateUpdated|date('F j, Y')  }}</p>
                                 </header>
 
-                                <span class="image featured"><img src="images/pic08.jpg" alt="" /></span>
+                                <span class="image featured"><img src="{{ blog.getImageFile.getImageFile }}" alt="{{ blog.getImageFile.getName }}" /></span>
 
                                 {% apply markdown_to_html %}
                                 {{ blog.getContent|raw  }}
