some stuff for image content and password reset

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -175,7 +175,7 @@
                                                 </a>
                                                 <header class="second icon solid fa-cog">
                                                     <h3>
-                                                        Also a Heading
+                                                        Also a Headinig
                                                     </h3>
                                                     <p>
                                                     And another subtitle
