changing the title of the page

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,7 @@
 <html>
     <head>
         <title>
-            {% apply siteTitle_content %}ZeroFour by HTML5 UP{% endapply %}
+            {% apply siteTitle_content %}Selene CMS{% endapply %}
         </title>
         <meta charset="utf-8" />
         <meta name="viewport"
@@ -106,7 +106,7 @@
                         <!-- Banner -->
                         <div id="banner">
                             <h2>
-                                <strong>ZeroFour:</strong> A free responsive site template
+                                <strong>{% apply siteTitle_content %}Selene CMS{% endapply %}</strong>{% apply siteSubTitle_content %}A free responsive site template{% endapply %}
                                 <br />
                                 built on HTML5 and CSS3 by <a href="http://html5up.net">
                                     HTML5 UP
