comments are here

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -291,155 +291,44 @@
                                         <div class="col-8 col-12-medium">
                                             <!-- Article list -->
                                             <section class="box article-list">
-                                                <h2 class="icon fa-file-alt">
-                                                    Recent Posts
-                                                </h2>
+                                                <h2 class="icon fa-file-alt">Recent Posts</h2>
+                                                {% for b in blogs %}
+                                                    <!-- Excerpt -->
+                                                    <article class="box excerpt">
+                                                        <a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
+                                                        <div>
+                                                            <header>
+                                                                <span class="date">{{ b.getDatePublished|date('F j, Y')   }}</span>
+                                                                <h3><a href="{{ path('selene_cms_blog_post', { slug: b.getSlug  })  }}">{{ b.getTitle  }}</a></h3>
+                                                            </header>
+                                                            {{ blog.getPreview   }}
+                                                        </div>
+                                                    </article>
+                                                {% endfor %}
 
-                                                <!-- Excerpt -->
-                                                <article class="box excerpt">
-                                                    <a href="#" class="image left">
-                                                        <img src="{{ asset("build/images/pic04.jpg") }}"
-                                                             alt="" />
-                                                    </a>
-                                                    <div>
-                                                        <header>
-                                                            <span class="date">
-                                                                July 24
-                                                            </span>
-                                                            <h3>
-                                                                <a href="#">
-                                                                    Repairing a
-                                                                    hyperspace window
-                                                                </a>
-                                                            </h3>
-                                                        </header>
-                                                        <p>
-                                                        Phasellus quam turpis,
-                                                        feugiat sit amet ornare in,
-                                                        hendrerit in lectus semper
-                                                        mod quisturpis nisi
-                                                        consequat etiam lorem.
-                                                        Phasellus quam turpis,
-                                                        feugiat et sit amet ornare
-                                                        in, hendrerit in lectus
-                                                        semper mod quis eget mi
-                                                        dolore.
-                                                        </p>
-                                                    </div>
-                                                </article>
-
-                                                <!-- Excerpt -->
-                                                <article class="box excerpt">
-                                                    <a href="#" class="image left">
-                                                        <img src="{{ asset("build/images/pic05.jpg") }}"
-                                                             alt="" />
-                                                    </a>
-                                                    <div>
-                                                        <header>
-                                                            <span class="date">
-                                                                July 18
-                                                            </span>
-                                                            <h3>
-                                                                <a href="#">
-                                                                    Adventuring with a
-                                                                    knee injury
-                                                                </a>
-                                                            </h3>
-                                                        </header>
-                                                        <p>
-                                                        Phasellus quam turpis,
-                                                        feugiat sit amet ornare in,
-                                                        hendrerit in lectus semper
-                                                        mod quisturpis nisi
-                                                        consequat etiam lorem.
-                                                        Phasellus quam turpis,
-                                                        feugiat et sit amet ornare
-                                                        in, hendrerit in lectus
-                                                        semper mod quis eget mi
-                                                        dolore.
-                                                        </p>
-                                                    </div>
-                                                </article>
-
-                                                <!-- Excerpt -->
-                                                <article class="box excerpt">
-                                                    <a href="#" class="image left">
-                                                        <img src="{{ asset("build/images/pic06.jpg") }}"
-                                                             alt="" />
-                                                    </a>
-                                                    <div>
-                                                        <header>
-                                                            <span class="date">
-                                                                July 14
-                                                            </span>
-                                                            <h3>
-                                                                <a href="#">
-                                                                    Preparing for Y2K38
-                                                                </a>
-                                                            </h3>
-                                                        </header>
-                                                        <p>
-                                                        Phasellus quam turpis,
-                                                        feugiat sit amet ornare in,
-                                                        hendrerit in lectus semper
-                                                        mod quisturpis nisi
-                                                        consequat etiam lorem.
-                                                        Phasellus quam turpis,
-                                                        feugiat et sit amet ornare
-                                                        in, hendrerit in lectus
-                                                        semper mod quis eget mi
-                                                        dolore.
-                                                        </p>
-                                                    </div>
-                                                </article>
                                             </section>
                                         </div>
                                         <div class="col-4 col-12-medium">
+
                                             <!-- Spotlight -->
                                             <section class="box spotlight">
-                                                <h2 class="icon fa-file-alt">
-                                                    Spotlight
-                                                </h2>
+                                                <h2 class="icon fa-file-alt">Spotlight</h2>
                                                 <article>
-                                                    <a href="#" class="image featured">
-                                                        <img src="{{ asset("build/images/pic07.jpg") }}"
-                                                             alt="" />
-                                                    </a>
+                                                    <a href="#" class="image featured"><img src="images/pic07.jpg" alt=""></a>
                                                     <header>
-                                                        <h3>
-                                                            <a href="#">
-                                                                Neural Implants
-                                                            </a>
-                                                        </h3>
-                                                        <p>
-                                                        The pros and cons. Mostly
-                                                        cons.
-                                                        </p>
+                                                        <h3><a href="#">{% apply spotlightTitle_content %}Neural Implants{% endapply %}</a></h3>
+                                                        {% apply spotlight_content %}
+                                                        <p>The pros and cons. Mostly cons.</p>
                                                     </header>
-                                                    <p>
-                                                    Phasellus quam turpis, feugiat
-                                                    sit amet ornare in, hendrerit in
-                                                    lectus semper mod quisturpis
-                                                    nisi consequat ornare in,
-                                                    hendrerit in lectus semper mod
-                                                    quis eget mi quat etiam lorem.
-                                                    Phasellus quam turpis, feugiat
-                                                    sed et lorem ipsum dolor
-                                                    consequat dolor feugiat sed et
-                                                    tempus consequat etiam.
-                                                    </p>
-                                                    <p>
-                                                    Lorem ipsum dolor quam turpis,
-                                                    feugiat sit amet ornare in,
-                                                    hendrerit in lectus semper mod
-                                                    quisturpis nisi consequat etiam
-                                                    lorem sed amet quam turpis.
-                                                    </p>
+                                                    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus semper mod
+                                                    quisturpis nisi consequat ornare in, hendrerit in lectus semper mod quis eget mi quat etiam
+                                                    lorem. Phasellus quam turpis, feugiat sed et lorem ipsum dolor consequat dolor feugiat sed
+                                                    et tempus consequat etiam.</p>
+                                                    <p>Lorem ipsum dolor quam turpis, feugiat sit amet ornare in, hendrerit in lectus semper
+                                                    mod quisturpis nisi consequat etiam lorem sed amet quam turpis.</p>
+                                                    {% endapply %}
                                                     <footer>
-                                                        <a href="#"
-                                                           class="button alt icon solid fa-file-alt">
-                                                            Continue Reading
-                                                        </a>
+                                                        <a href="#" class="button alt icon solid fa-file-alt">Continue Reading</a>
                                                     </footer>
                                                 </article>
                                             </section>
