making a footer feature in the admin

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -14,7 +14,7 @@
                             <h2 class="icon fa-file-alt">
                                 Recent Posts
                             </h2>
-                            {{ component('recentposts') }}
+                            {#{ component('recentposts') }#}
                         </section>
                     </div>
                 </div>
